[package]
name = "google-sheets-crud"
version = "0.7.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["catch-panic"] }
axum = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
time = "0.3.21"
reqwest = { version = "0.11.26", features = ["json", "stream", "socks"] }
anyhow = "1.0"
regex = "1.10.3"

google-cloud-auth = "0.15.0"
